smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/invalid-escape-apostrophe.smithy
// Syntax error at line 4, column 16: Error parsing quoted string: Invalid escape found in string: `\'` | Model
namespace smithy.example

@documentation("\'")
string MyString
